--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 12 12:50:18 IST 2019
+#Sun Jul 14 23:15:02 IST 2019
 >>>>>>>=aecacb746a888e639bf7369d16597f47287345d0
-sdk.dir=/home/shaurya-vj/Android/Sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\nishi\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
