--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crux.bphcfreshers">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".Deps"></activity>
+        <activity android:name=".Clubs" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,7 +33,7 @@
 
         <activity
             android:name=".BPHCMAP"
-            android:label="@string/title_activity_bphcmap"></activity>
+            android:label="@string/title_activity_bphcmap" />
         <activity android:name=".Fests" />
         <activity android:name=".clubdep" />
         <activity
