--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".libinfo"></activity>
-        <activity android:name=".Deps" />
-        <activity android:name=".Clubs" />
+        <activity android:name=".Gsignout"></activity>
+        <activity android:name=".GSigni" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -34,8 +33,19 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".BPHCMAP"
+            android:name=".BPHCMap"
             android:label="@string/title_activity_bphcmap" />
+        <activity android:name=".libinfo" />
+        <activity android:name=".Deps" />
+        <activity android:name=".Clubs" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
         <activity android:name=".Fests" />
         <activity android:name=".clubdep" />
         <activity
