--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'com.facebook.android:facebook-applinks:[4,5)'
 
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
