--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Gsignout"></activity>
+        <activity android:name=".FacebookLinks"></activity>
+        <activity android:name=".Gsignout" />
         <activity android:name=".GSigni" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -32,7 +33,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
         <activity
             android:name=".BPHCMap"
             android:label="@string/title_activity_bphcmap" />
@@ -69,6 +70,8 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <receiver android:name=".AlertActivity" />
     </application>
 
 </manifest>
