--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
+             sign the APK for publishiwng.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
