--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,19 +31,15 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation "com.android.support:support-compat:28.0.0"
-    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'androidx.core:core:1.0.0'
     implementation 'com.facebook.android:facebook-applinks:[4,5)'
 
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-auth:18.1.0'
+
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     androidTestImplementation 'androidx.test:runner:1.1.0'
