--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crux.bphcfreshers">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -19,24 +20,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".FacebookLinks"></activity>
-        <activity android:name=".Gsignout" />
-        <activity android:name=".GSigni" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishiwng.
+             sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+
         <activity
             android:name=".BPHCMap"
-            android:label="@string/title_activity_bphcmap" />
+            android:label="@string/title_activity_bphcmaps"></activity>
+        <activity android:name=".FacebookLinks" />
+        <activity android:name=".Gsignout" />
+        <activity android:name=".GSigni" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
         <activity android:name=".libinfo" />
         <activity android:name=".Deps" />
         <activity android:name=".Clubs" />
