--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
